--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Beware of The Vomit</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/ico" href="icon/favicon.ico">
-    <img src="/images/flames.gif" alt="GIF" class="global-gif">
+    <img src="images/flames.gif" alt="GIF" class="global-gif">
     
     <style>
         /* Image stretching animation */
@@ -96,7 +96,7 @@
 
     <!-- The Audio Element for Background Music -->
     <audio id="background-audio">
-        <source src="/music/oops.mp3" type="audio/mp3">
+        <source src="music/oops.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 
