--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </audio>
 
     <!-- Start Music Button -->
-    <button class="start-button" id="start-music-button">Start Music</button>
+    <button class="start-button" id="start-music-button">Start Music  WARNING! LOUD!</button>
 
     <!-- Restart Music Button -->
     <button class="restart-button" id="restart-music-button">Restart Music</button>
